<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"

    >



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/mbta_scavenger_logo"
            android:layout_margin="10dp"
            />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/distance_pref"
        android:textSize="18sp"
        android:layout_weight="1"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/km_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometer"
                    android:layout_margin="3dp"
                    android:layout_weight="1"/>


                <RadioButton
                    android:id="@+id/miles_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles"
                    android:layout_margin="3dp"
                    android:layout_weight="1"/>

        </RadioGroup>
</LinearLayout>
        <TextView
            android:id="@+id/score_textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            />


        <Button
            android:id="@+id/locate_btn"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/locate"
            android:layout_margin="10dp"
            />

       <!-- <Button
            android:id="@+id/history_btn"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/history"
            android:layout_margin="10dp"
            />-->

        <Button
            android:id="@+id/map_btn"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/map"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/gloat_btn"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/gloat"
            android:layout_margin="10dp"/>


</LinearLayout>
